# pioran

./: .buildinfo  README.md  checks.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: codeautolink-cache.json  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/references/: On_the_fft.doctree  On_the_interpolation.doctree  On_the_nufft.doctree  On_the_sample_variance.doctree  references.doctree
.doctrees/tutorials/: Modelling.doctree  Simulations.doctree  Tutorials.doctree  models_acvf.doctree  models_psd.doctree  simulations_acv.doctree  simulations_tk.doctree
.doctrees/userguide/: Explanation.doctree  Introduction.doctree  Quickstart.doctree  Timeseries.doctree  User.doctree
.github/workflows/: documentation.yml  python-package.yml
_modules/: index.html  pioran.html
_sources/: index.rst.txt
autoapi/: index.html
benchmark/: bench_cpu.py  bench_cpu_direct.py  benchmark_cpu.txt  benchmark_cpu_direct.txt  plot_benchmarks.ipynb
docs/: API.rst  conf.py  example.md  index.rst  installation.md  introduction.md  modelling.md  modelling.rst  modelling_acvf.md  modelling_psd.md  models_acvf.ipynb  modules.rst  notebook.rst  notebooks.rst  numerical_FourierTransform.ipynb  pioran.rst  simulations.md  simulations.rst  timeseries.md
example/: example_1.py
pioran/: __init__.py  acvf.py  acvf_base.py  core.py  main.py  optim.py  parameter_base.py  parameters.py  plots.py  psd.py  timeseries.py  tools.py  utils.py
references/: On_the_fft.html  On_the_interpolation.html  On_the_nufft.html  On_the_sample_variance.html  references.html
tutorials/: Modelling.html  Simulations.html  Tutorials.html  models_acvf.html  models_psd.html  simulations_acv.html  simulations_tk.html
userguide/: Explanation.html  Introduction.html  Quickstart.html  Timeseries.html  User.html
(+280 files in other folders)
